--- a/public/html/property.html
+++ b/public/html/property.html
@@ -4,19 +4,26 @@
             <h2 class='text-center'>Edit Apartment</h2>
             <div class="form-group">
                 <label for="">Apartment Number:</label>
-                <input type="number" class='form-control' ng-model='editProperty.apartment' required>
+                <input type="number" class='form-control' ng-model='editProperty.apartment' min=1 required>
             </div>
             <div class="form-group">
                 <label for="">Status</label>
-                <input type="text" class='form-control' ng-model='editProperty.status ' required>
+                <select class="form-control" ng-model='editProperty.status ' required>
+                    <option>rented</option>
+                    <option>available</option>
+                  </select>
+            </div>
+            <div class="form-group">
+                <label for="">Bedrooms:</label>
+                <input type="number" class='form-control' ng-model='editProperty.bedrooms' min=1 max=5 required>
             </div>
             <div class="form-group">
                 <label for="">Rent</label>
-                <input type="number" class='form-control' ng-model='editProperty.rent' required>
+                <input type="number" class='form-control' ng-model='editProperty.rent' min=0 required>
             </div>
             <div class="form-group">
                 <label for="">Utilities Price:</label>
-                <input type="number" class='form-control' ng-model='editProperty.utilitiesPrice' required>
+                <input type="number" class='form-control' ng-model='editProperty.utilitiesPrice' min=0 required>
             </div>
             <button class='btn btn-default submit' ng-click="hideMyForm()">Cancel</button>
             <button type='submit' class='btn btn-primary '>Save</button>
@@ -26,19 +33,26 @@
             <h2 class='text-center'>Apartment</h2>
             <div class="form-group">
                 <label for="">Apartment Number:</label>
-                <input type="number" class='form-control' ng-model='newProperty.apartment' required>
+                <input type="number" class='form-control' ng-model='newProperty.apartment' min=1 srequired>
             </div>
             <div class="form-group">
                 <label for="">Status</label>
-                <input type="text" class='form-control' ng-model='newProperty.status' required>
+                <select class="form-control" ng-model='newProperty.status ' required>
+                    <option>rented</option>
+                    <option>available</option>
+                  </select>
+            </div>
+            <div class="form-group">
+                <label for="">Bedrooms:</label>
+                <input type="number" class='form-control' ng-model='newProperty.bedrooms' min=1 max=5 required>
             </div>
             <div class="form-group">
                 <label for="">Rent</label>
-                <input type="number" class='form-control' ng-model='newProperty.rent' required>
+                <input type="number" class='form-control' ng-model='newProperty.rent' min=0 required>
             </div>
             <div class="form-group">
                 <label for="">Utilities Price:</label>
-                <input type="number" class='form-control' ng-model='newProperty.utilitiesPrice' required>
+                <input type="number" class='form-control' ng-model='newProperty.utilitiesPrice' min=0 required>
             </div>
             <button class='btn btn-default submit' ng-click="hideMyForm()">Cancel</button>
             <button type='submit' class='btn btn-primary '>Add</button>
@@ -85,6 +99,7 @@
                 <tr>
                     <th ng-click='sortBy("apartment")'>Apartment Number</th>
                     <th ng-click='sortBy("status")'>Status</th>
+                    <th ng-click='sortBy("bedrooms")'>Bedrooms</th>
                     <th ng-click='sortBy("rent ")'>Rent</th>
                     <th ng-click='sortBy("utilitiesPrice ")'>Util Price</th>
                 </tr>
@@ -93,6 +108,7 @@
                 <tr ng-repeat='property in properties | filter:searchFilter | orderBy:sortOrder track by $index'>
                     <td>{{property.apartment}}</td>
                     <td>{{property.status}}</td>
+                    <td>{{property.bedrooms}}</td>
                     <td>{{property.rent}}</td>
                     <td>{{property.utilitiesPrice}}</td>
                     <td>
