added splash page

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,3 +1,15 @@
-<div class="container">
-    <h1 class='test-center'>Home</h1>
+<div class="container home">
+    <div class="row landing">
+      <div class="col-xs-6 col-xs-offset-3">
+          <h3 class='text-center'>Easy way to keep track of your properties and tenants. You will be able to add tenants to rooms once you added the apartements</h3>
+          <div class="row">
+              <div class="col-xs-3">
+                  <a type="button" class='btn btn-lg btn-success navigators' ui-sref='property' name="button">Add Properties</a>
+              </div>
+              <div class="col-xs-3">
+                  <a type="button" class='btn btn-lg btn-success navigators' ui-sref='tenant' name="button">Add Tenants</a>
+              </div>
+          </div>
+      </div>
+    </div>
 </div>
